Correzione errore JwtAuthenticationConverter authorities